Fixes container size on mobile

--- a/source/stylesheets/_layout.css.scss
+++ b/source/stylesheets/_layout.css.scss
@@ -22,7 +22,7 @@
   margin: 0 auto;
 
   @media screen and (max-width: 400px) {
-    width: 90%;
+    width: 100%;
     padding: 0;
   }
 }
